data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4162.wast
;; 1. **Test Description**:    Indirect Function Call with Mismatched Type and Infinite Loop:    - Constraint: Verify type mismatch handling in call_indirect and infinite loop handling.    - Test Behavior: Define a loop that utilizes `br_if` to conditionally break based on a function called indirectly via `call_indirect` where the type does not match.

(assert_invalid
  (module
    (type $sig_correct (func (param i32) (result i32)))
    (type $sig_mismatch (func (param i64) (result i64)))
    (func $f_correct (param i32) (result i32)
      (i32.add (local.get 0) (i32.const 1))
    )
    (table 1 funcref)
    (elem (i32.const 0) $f_correct)
    (func (export "test_mismatched_function")
      (loop $infinite_loop
        (call_indirect (type $sig_mismatch) (i32.const 0) (i64.const 0))
        (br_if $infinite_loop (i32.const 1))
      )
    )
  )
  "type mismatch"
)